--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,38 +1,13 @@
 pipeline {
     agent any
-
     stages {
-        stage('Persiapan') {
+        stage('Deploy') {
             steps {
-                echo 'Memulai proses deployment untuk wpu-resolusi...'
-                sh 'git --version'
+                // Membuat folder langsung di home pc-6 dan memberi izin
+                sh 'mkdir -p /home/pc-6/deploy_resolusi'
+                sh 'cp *.txt /home/pc-6/deploy_resolusi/'
+                sh 'chmod -R 777 /home/pc-6/deploy_resolusi'
             }
-        }
-
-        stage('Validasi File') {
-            steps {
-                echo 'Memeriksa daftar file yang ada:'
-                sh 'ls -lh'
-            }
-        }
-
-        stage('Simulasi Deploy') {
-            steps {
-                echo 'Menyalin file resolusi ke folder target...'
-                // Contoh: membuat folder deploy jika belum ada
-                sh 'mkdir -p ~/deploy_resolusi'
-                sh 'cp *.txt ~/deploy_resolusi/'
-                echo 'Deployment selesai!'
-            }
-        }
-    }
-
-    post {
-        success {
-            echo 'Selamat! Build dan Deploy berhasil dilakukan.'
-        }
-        failure {
-            echo 'Waduh, ada yang salah. Cek log konsol kembali.'
         }
     }
 }
