--- a/JenkinsFile
+++ b/JenkinsFile
@@ -7,7 +7,8 @@ pipeline {
                 sh 'mkdir -p /home/pc-6/deploy_resolusi'
                 sh 'cp *.txt /home/pc-6/deploy_resolusi/'
                 sh 'chmod -R 777 /home/pc-6/deploy_resolusi'
-                sh 'ls -l'
+                sh 'ls -ld /home/pc-6/deploy_resolusi'
+                sh 'ls -l /home/pc-6/deploy_resolusi'
             }
         }
     }
